--- a/public/app.css
+++ b/public/app.css
@@ -30,3 +30,20 @@ footer {
     height: 2rem;
     width: 2rem;
 }
+
+/* lading page */
+
+/* Imagen efecto parallax */
+.parallax {
+    /* The image used */
+    background-image: url("../img2/paralax.jpg");
+
+    /* Set a specific height */
+    min-height: 300px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
