mvp a falta de revision

--- a/public/app.css
+++ b/public/app.css
@@ -33,17 +33,28 @@ footer {
 
 /* lading page */
 
-/* Imagen efecto parallax */
-.parallax {
-    /* The image used */
-    background-image: url("../img2/paralax.jpg");
+.main-img {
+    width: 90%;
+}
 
-    /* Set a specific height */
-    min-height: 300px;
+a {
+    text-decoration: none;
+    color: #212529;
+}
 
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+#camisetas-mujer:hover,
+#camisetas-hombre:hover {
+    background-color: #ccc;
+}
+
+.miembro img {
+    width: 100%;
+}
+
+.miembro h3 {
+    margin: 15px;
+}
+
+.miembro {
+    border: 1px solid black;
 }
